--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1051,3 +1051,38 @@ The authors have declared no competing interest.},
    url = {https://dx.doi.org/10.1093/nar/gkaf454},
    year = {2025}
 }
+@article{delVal2021,
+   abstract = {RecA plays a central role in DNA repair and is a main actor involved in recombination and activation of the SOS response. It is also used in the context of biotechnological applications in recombinase polymerase isothermal amplification (RPA). In this work, we studied the biological properties of seven RecA variants, in particular their recombinogenic activity and their ability to induce the SOS response, to better understand the structure–function relationship of RecA and the effect of combined mutations. We also investigated the biochemical properties of RecA variants that may be useful for the development of biotechnological applications. We showed that Dickeya dadantii RecA (DdRecA) had an optimum strand exchange activity at 30&nbsp;°C and in the presence of a dNTP mixture that inhibited Escherichia coli RecA (EcRecA). The differences between the CTD and C-tail of the EcRecA and DdRecA domains could explain the altered behaviour of DdRecA. D. radiodurans RecA (DrRecA) was unable to perform recombination and activation of the SOS response in an E. coli context, probably due to its inability to interact with E. coli recombination accessory proteins and SOS LexA repressor. DrRecA strand exchange activity was totally inhibited in the presence of chloride ions but worked well in acetate buffer. The overproduction of Pseudomonas aeruginosa RecA (PaRecA) in an E. coli context was responsible for a higher SOS response and defects in cellular growth. PaRecA was less inhibited by the dNTP mixture than EcRecA. Finally, the study of three variants, namely, EcPa, EcRecAV1 and EcRecAV2, that contained a combination of mutations that, taken independently, are described as improving recombination, led us to raise new hypotheses on the structure–function relationship and on the monomer–monomer interactions that perturb the activity of the protein as a whole.},
+   author = {Elsa del Val and William Nasser and Hafid Abaibou and Sylvie Reverchon},
+   doi = {10.1038/s41598-021-00589-9},
+   isbn = {0123456789},
+   issn = {2045-2322},
+   issue = {1},
+   journal = {Scientific Reports 2021 11:1},
+   keywords = {Biochemistry,Microbiology},
+   month = {10},
+   pages = {1-17},
+   pmid = {34702889},
+   publisher = {Nature Publishing Group},
+   title = {Design and comparative characterization of RecA variants},
+   volume = {11},
+   url = {https://www.nature.com/articles/s41598-021-00589-9},
+   year = {2021}
+}
+@article{Pribis2019,
+   abstract = {Antibiotics can induce mutations that cause antibiotic resistance. Yet, despite their importance, mechanisms of antibiotic-promoted mutagenesis remain elusive. We report that the fluoroquinolone antibiotic ciprofloxacin (cipro) induces mutations by triggering transient differentiation of a mutant-generating cell subpopulation, using reactive oxygen species (ROS). Cipro-induced DNA breaks activate the Escherichia coli SOS DNA-damage response and error-prone DNA polymerases in all cells. However, mutagenesis is limited to a cell subpopulation in which electron transfer together with SOS induce ROS, which activate the sigma-S (σS) general-stress response, which allows mutagenic DNA-break repair. When sorted, this small σS-response-“on” subpopulation produces most antibiotic cross-resistant mutants. A U.S. Food and Drug Administration (FDA)-approved drug prevents σS induction, specifically inhibiting antibiotic-promoted mutagenesis. Further, SOS-inhibited cell division, which causes multi-chromosome cells, promotes mutagenesis. The data support a model in which within-cell chromosome cooperation together with development of a “gambler” cell subpopulation promote resistance evolution without risking most cells. Bacteria exposed to antibiotic acquire reactive oxygen in a transient “gambler” cell subpopulation that undertakes general stress response-induced mutagenic DNA break repair, evolves resistance to new antibiotics, and is inhibited by an FDA-approved drug that inhibits evolvability.},
+   author = {John P. Pribis and Libertad García-Villada and Yin Zhai and Ohad Lewin-Epstein and Anthony Z. Wang and Jingjing Liu and Jun Xia and Qian Mei and Devon M. Fitzgerald and Julia Bos and Robert H. Austin and Christophe Herman and David Bates and Lilach Hadany and P. J. Hastings and Susan M. Rosenberg},
+   doi = {10.1016/J.MOLCEL.2019.02.037},
+   issn = {1097-4164},
+   issue = {4},
+   journal = {Molecular cell},
+   keywords = {Anti-Bacterial Agents / adverse effects*,Bacterial / drug effects,Bacterial / genetics*,Cell Division / drug effects,Ciprofloxacin / adverse effects,DNA Damage / drug effects,DNA-Directed DNA Polymerase / genetics,Drug Resistance,Escherichia coli / drug effects,Escherichia coli / genetics*,Escherichia coli / pathogenicity,Extramural,Gene Expression Regulation,Genetics / drug effects,John P Pribis,Libertad García-Villada,MEDLINE,Mutagenesis / drug effects,Mutagenesis / genetics*,Mutation,N.I.H.,NCBI,NIH,NLM,National Center for Biotechnology Information,National Institutes of Health,National Library of Medicine,Non-U.S. Gov't,PMC6553487,PubMed Abstract,Reactive Oxygen Species / metabolism,Research Support,SOS Response,Sigma Factor / genetics,Susan M Rosenberg,doi:10.1016/j.molcel.2019.02.037,pmid:30948267},
+   month = {5},
+   pages = {785-800.e7},
+   pmid = {30948267},
+   publisher = {Mol Cell},
+   title = {Gamblers: An Antibiotic-Induced Evolvable Cell Subpopulation Differentiated by Reactive-Oxygen-Induced General Stress Response},
+   volume = {74},
+   url = {https://pubmed.ncbi.nlm.nih.gov/30948267/},
+   year = {2019}
+}
