--- a/Results.tex
+++ b/Results.tex
@@ -45,11 +45,11 @@ Since the duration of the RecB-DSB interaction was unaffected by the amount of D
 Whereas the lifetime of RecB spots informs us on how long RecB stays bound to DSBs, the rate of appearance of spots can be used to estimate the rate of recruitment of RecB to DSBs under each DNA damage condition. To calculate this rate, we used the RecB spot lifetime histogram fits to estimate the total number of slow-dissociating spots per unit of time. Since we determined that the appearance of a slow-dissociating spot corresponds to the binding of RecB to a DSB, we could calculate the number of RecB recruitments to DSBs per cell per hour (Figure \ref{Fig:recruitment}B). We estimated that 1.3 $\pm$ 1.1 RecB molecules are recruited to DSBs per hour in the absence of ciprofloxacin. As expected, the recruitment rate of RecB increased with ciprofloxacin concentration, up to 8.2 $\pm$ 3.6 RecB recruited to DSBs per hour at 30 ng/ml ciprofloxacin.
 
 % RecB recruitment in mutants
-In the \dreca\ and \geneteneighty\ mutants, the rate of initial DSB formation is expected to be the same as in the wild-type, as these mutations only affect the repair process once DSBs are present. Surprisingly, the rate of recruitment of RecB to DSBs in the \dreca\ mutant was higher than in the wild-type both in the absence (1.6 $\pm$ 1.1 and 8.3 $\pm$ 2.8) and the presence (10.8 $\pm$ 4.3 and 28.8 $\pm$ 9.5) of ciprofloxacin (Figure \ref{Fig:recruitment}C). We hypothesise that this higher rate of RecB recruitment to DSBs is a result of multiple recruitment events on the same original DSB that cannot be repaired because of the absence of RecA, as was previously reported \cite{Capaldo1975,Skarstad1993}. In the \geneteneighty\ mutant, RecB recruitment was higher than in the wild-type in the absence of ciprofloxacin (1.6 $\pm$ 1.1 and 8.5 $\pm$ 1.7), and equivalent to WT cells in the presence of ciprofloxacin (Figure \ref{Fig:recruitment}C). This might reflect the ability of the \geneteneighty\ mutant to repair DSBs albeit with lower efficiency than wild-type cells (see Discussion).
+In the \dreca\ and \geneteneighty\ mutants, the rate of initial DSB formation is expected to be the same as in the wild-type, as these mutations only affect the repair process once DSBs are present. Surprisingly, the rate of recruitment of RecB to DSBs in the \dreca\ mutant was higher than in the wild-type both in the absence (1.6 $\pm$ 1.1 and 8.3 $\pm$ 2.8) and the presence (10.8 $\pm$ 4.3 and 28.8 $\pm$ 9.5) of ciprofloxacin (Figure \ref{Fig:recruitment}C). We hypothesise that this higher rate of RecB recruitment to DSBs is a result of multiple recruitment events on the same original DSB that cannot be repaired because of the absence of RecA. In the \geneteneighty\ mutant, RecB recruitment was higher than in the wild-type in the absence of ciprofloxacin (1.6 $\pm$ 1.1 and 8.5 $\pm$ 1.7), and equivalent to WT cells in the presence of ciprofloxacin (Figure \ref{Fig:recruitment}C). This might reflect the ability of the \geneteneighty\ mutant to repair DSBs albeit with lower efficiency than wild-type cells (see Discussion).
 
 % Part 3: Imaging RecA foci and filaments
 \subsection*{Ciprofloxacin exposure induces formation of RecA filaments}
-During DSB processing, RecBCD facilitates the loading of the RecA protein on ssDNA. To broaden our view of the repair process down\-stream of RecBCD, we imaged a tandem fusion of RecA with the fluorescent protein SYFP2, which was previously shown to preserve RecA functionality \cite{Wiktor2021}. Based on the fluorescence distribution in the cells (Supp. Figure \ref{SIFig:reca_structures}A), we identified three states of RecA: diffuse; forming a bright focus; or forming an elongated structure (called "filament" thereafter), which matches previous \emph{in vivo} observations of RecA \cite{Wiktor2021}. Because of the large diversity of shapes observed, particularly for RecA filaments, detecting RecA structures using rule-based algorithms was challenging. Therefore, we designed and trained a deep-learning algorithm capable of classifying individual cells based on the three types of spatial distributions cited above (Supp. Figures \ref{SIFig:object_class} and \ref{SIFig:reca_structures}B). In cells not exposed to ciprofloxacin, the RecA-associated fluorescence was mostly diffuse, and formed either a bright focus or a filament in $\sim$20\% of the cells. This is consistent with the expectation that RecA diffuses freely in the cell without DNA damage, and polymerises on DNA in the event of an endogenous DSB. After one hour of exposure, the proportion of cells that contained a RecA filament had increased to $\sim$40\% at 20 ng/ml ciprofloxacin, and $\sim$60\% at 30 ng/ml. RecA foci, on the other hand, formed rapidly following ciprofloxacin exposure (present in $\sim$40\% of the cells after 15 min of exposure to 30 ng/ml ciprofloxacin) and dissipated after $\sim$1 hour. Taken together, these results show that RecA foci are transient structures in the repair process that do not accumulate under high DNA damage, whereas RecA filaments accumulate under constant exposure to ciprofloxacin. These results are consistent with previous imaging of RecA(PMID: 30717823, PMID: 24362571, PMID: 29789437,wiktor 2021), which have reported transient foci when DSBs occur at a replication fork and can be repaired rapidly (PMID: 29789437) but longer-lived filaments upon exogenous DNA damage(PMID: 30717823, PMID: 24362571, wiktor 2021). They are also consistent with our observations of RecB recruitment rates per cell in the presence and absence of ciprofloxacin.
+During DSB processing, RecBCD facilitates the loading of the RecA protein on ssDNA. To broaden our view of the repair process down\-stream of RecBCD, we imaged a tandem fusion of RecA with the fluorescent protein SYFP2, which was previously shown to preserve RecA functionality \cite{Wiktor2021}. Based on the fluorescence distribution in the cells (Supp. Figure \ref{SIFig:reca_structures}A), we identified three states of RecA: diffuse; forming a bright focus; or forming an elongated structure (called "filament" thereafter), which matches previous \emph{in vivo} observations of RecA \cite{Wiktor2021}. Because of the large diversity of shapes observed, particularly for RecA filaments, detecting RecA structures using rule-based algorithms was challenging. Therefore, we designed and trained a deep-learning algorithm capable of classifying individual cells based on the three types of spatial distributions cited above (Supp. Figures \ref{SIFig:object_class} and \ref{SIFig:reca_structures}B). In cells not exposed to ciprofloxacin, the RecA-associated fluorescence was mostly diffuse, and formed either a bright focus or a filament in $\sim$20\% of the cells. This is consistent with the expectation that RecA diffuses freely in the cell without DNA damage, and polymerises on DNA in the event of an endogenous DSB. After one hour of exposure, the proportion of cells that contained a RecA filament had increased to $\sim$40\% at 20 ng/ml ciprofloxacin, and $\sim$60\% at 30 ng/ml. RecA foci, on the other hand, formed rapidly following ciprofloxacin exposure (present in $\sim$40\% of the cells after 15 min of exposure to 30 ng/ml ciprofloxacin) and dissipated after $\sim$1 hour. Taken together, these results show that RecA foci are transient structures in the repair process that do not accumulate under high DNA damage, whereas RecA filaments accumulate under constant exposure to ciprofloxacin. These results are consistent with previous imaging of RecA \cite{Lesterlin2013, Amarh2018, Ghodke2019, Wiktor2021}, which have reported transient foci when DSBs occur at a replication fork and can be repaired rapidly \cite{Amarh2018}, but longer-lived filaments upon exogenous DNA damage \cite{Lesterlin2013, Ghodke2019, Wiktor2021}.
 
 % Part 4: Colocalisation of RecB with the nucleoid
 \subsection*{DSB-bound RecB colocalises with the bacterial nucleoid}
