Small additions and edits

--- a/Article.tex
+++ b/Article.tex
@@ -17,6 +17,7 @@
 \newcommand{\ncells}[1]{N$_{\text{cells}}$ = #1} % N_cells = {}
 \newcommand{\nspots}[1]{N$_{\text{spots}}$ = #1} % N_spots = {}
 \newcommand{\nnucl}[1]{N$_{\text{nucleoids}}$ = #1} % N_nucleoids = {}
+\newcommand{\ph}{$h^{-1}$} % h^{-1}
 
 % Surname of the lead author for the running footer
 \leadauthor{Thédié} 
