--- a/Methods.tex
+++ b/Methods.tex
@@ -10,7 +10,7 @@ For all experiments, the cells were grown in M9 supplemented with 0.2\% (w/v) gl
 Cells were grown overnight from a -80\celsius\ glycerol stock in 5 mL medium at 37\celsius, shaking at 150 rpm. In the morning, the cells were diluted 1:300 into 15 mL of medium and grown at 37\celsius, shaking at 150 rpm until they reached an \od\ of 0.2-0.3 (mid-exponential phase).
 Alternatively, a 15 mL culture was inoculated using a -80\celsius\ glycerol stock, and placed at 37\celsius\ with stirring in a turbidostat device (OGIBio), which measured \od\ and diluted cells at 3 min intervals, to keep them at a constant \od\ of 0.2.
 \subsubsection*{Halo labelling}
-We used a labelling protocol similar to our previous study \cite{Lepore2025}. A volume of cells equivalent to 1 mL at \od=0.2 was centrifuged (8000 rpm) and resuspended in 1 mL of fresh medium. 5 µL of JF549 dye (Janelia Fluor Halo-tag Ligand, Promega) was added (final concentration 1 µM) and the cells were further incubated for 1h at 37\celsius\ in the dark, shaking at 150 rpm.
+We used a labelling protocol similar to our previous study \cite{Lepore2025}. A volume of cells equivalent to 1 mL at \od=0.2 was centrifuged (8000 rpm) and resuspended in 1 mL of fresh medium. 5 µL of JF549 dye (Janelia Fluor Halo-tag Ligand, Promega, resuspended in DMSO) was added (final concentration 1 µM) and the cells were further incubated for 1h at 37\celsius\ in the dark, shaking at 150 rpm.
 \subsubsection*{DNA labelling}
 When relevant, cellular DNA was labelled by adding Sytox Green (Invitrogen, catalog number S7020) at a concentration of 500 nM, at the same time as the JF549 dye using similar incubation conditions (1h at 37\celsius\ in the dark, shaking at 150 rpm).
 \subsubsection*{Dye removal}
@@ -41,7 +41,7 @@ The 16-image brightfield Z-stack was first cropped to 5 images on one side of th
 Fluorescent spots were seg\-men\-ted using a seeded watershed algorithm on the Laplacian transform of the denoised RecB image. The quality of the segmentation was visually assessed by overlaying the segmentation mask on the raw fluorescence images. The segmentation parameters were optimised by trial-and-error to minimise the error rate (assessed by visual inspection of raw fluorescence images overlaid with the segmentation masks), but no manual curation was applied to avoid introducing user bias in the results.
 
 \paragraph*{Classification of RecA structures}
-We designed a U-net-based deep-learning model capable of classifying objects (in this case, cells) based on the type of RecA structure they contained (Supp. Figure \ref{SIFig:object_class}). In brief, the model was given as input the cell segmentation mask and the RecA-SYFP2 fluorescence image, and it provided as output a single class for each object: diffuse fluorescence; RecA focus; or RecA filament. The model's predictions were 84\% accurate, as evaluated against a test set of 15 manually labelled images that were not used in training.
+We designed a U-net-based deep-learning model capable of classifying objects (in this case, cells) based on the type of RecA structure they contained (Supp. Figure \ref{SIFig:object_class}). The model was trained on a dataset of XXX cells, manually labelled as containing either a RecA focus, a RecA filament, or neither of those (homogenous diffuse fluorescence). Because there were different numbers of each predicted class in the training set, the loss function (categorical cross-entropy) was weighted by the inverse class frequency (weights were 21, 101 and 133 for the diffuse, filament and focus classes, respectively). The model was trained on 128x128 pixel crops of the RecA-SYFP2 fluorescence images, with the corresponding cell segmentation mask as input. Data augmentation was performed using the \href{https://github.com/jeanollion/dataset_iterator}{dataset iterator} package by applying random rotations, flips, and elastic deformations. The model was trained for 1000 epochs with a batch size of 3, using the Adam optimiser. The learning rate was initially set to 0.0004, and reduced by a factor or 10 when the validation loss did not improve for 30 consecutive epochs (to a minimum of 1x10$^{-6}$). The model's predictions were evaluated against a test set of 15 manually labelled images that were not used in training, achieving an accuracy of 84\%.
 
 \paragraph*{Nucleoid segmentation}
 Sytox Green fluorescence images were processed with a rolling-ball noise subtraction (radius 6 pixels), and nucleoids segmented by a seeded watershed algorithm. The seed threshold was determined by Otsu's method \cite{Otsu1979}. Any segmented regions that were in contact with each other within the same cell were merged, and segmented regions smaller than 5 pixels were excluded. Regions with weak signal-to-noise ratio (SNR < 2) were also excluded. For each segmented region, the SNR was computed as follows:
