--- a/Results.tex
+++ b/Results.tex
@@ -2,7 +2,7 @@
 \section*{Results}
 
 \subsection*{RecB forms long-lived spots when recruited to DSBs caused by cipro\-floxacin}
-To quantify RecB binding time to DSBs in live \ecoli, we used a Halo-tag fusion to the RecB subunit, conjugated to the JF549 fluorescent dye (Figure \ref{Fig:exp_principle}A). The fusion was previously fully characterised, ensuring specific one-to-one labelling of RecB molecules without adverse effects on the DNA repair process \cite{Lepore2019a,Lepore2025}. As a result of the large size and topological constraints of the bacterial chromosome, DSB-bound RecB diffuses very slowly \cite{Lepore2025}. Therefore, we applied the previously developed technique of localisation enhancement \cite{Yu2006, Elf2007}: since RecB is present at low copy numbers in \ecoli\ [$\sim$5 molecules per cell on average \cite{Lepore2019a,Kalita2024}], imaging live cells with a long exposure time (1 second) made fast-diffusing RecB molecules appear as weak homogeneous signal in the cell, while very slow-diffusing RecB molecules formed diffraction-limited spots (referred to throughout this article as RecB spots, Figures \ref{Fig:exp_principle}B and \ref{Fig:exp_principle}C). The complete absence of similar spots in cells expressing the free Halo-tag from a plasmid confirmed that these spots were specific to RecB (Supp. Figure \ref{SIFig:freehalo_image}). However, their exact nature needed to be confirmed. Although DSB-bound molecules are expected to diffuse very slowly, the RecBCD-Halo complex diffuses in the crowded and constrained environment of the cytoplasm, and might undergo transient interactions with DNA \cite{Lepore2025}, which could lead to RecB spots forming independently of DSB binding. To gain more insight into the nature of RecB spots, we increased the number of DSBs by adding ciprofloxacin to agar pads before imaging, and measured the lifetime of the spots by recording 100-second timelapse videos with 2-sec interval between frames at different positions in the sample. The total duration of the experiment was 75 min following exposure to ciprofloxacin (Figure \ref{Fig:lifetimes}A). The 1-second exposure time was optimised to detect RecB spots with good signal-to-noise while limiting dye photobleaching and keeping a sufficient temporal resolution to determine spot lifetimes. Visual inspection of the timelapse data showed that RecB spot lifetime was hetereogenous, with a majority of spots being visible only for a 1-2 frames, and a small number persisting for longer times (Figure \ref{Fig:lifetimes}A). These longer-lived spots became more frequent as the ciprofloxacin concentration increased. Background-subtracted intensity time-traces for single RecB spots showed that spots lost their intensity in a single step (Supp. Figure \ref{SIFig:SM_traces}), consistent with single-molecule photobleaching or transitioning from a very slowly diffusing state to a rapid one. Therefore, our imaging setup allowed us to visualise single, very slow diffusing RecB molecules, and to measure the time they spent in this diffusive state.
+To quantify RecB binding time to DSBs in live \ecoli, we used a Halo-tag fusion to the RecB subunit, conjugated to the JF549 fluorescent dye (Figure \ref{Fig:exp_principle}A). The fusion was previously fully characterised, ensuring specific one-to-one labelling of RecB molecules without adverse effects on the DNA repair process \cite{Lepore2019a,Lepore2025}. As a result of the large size and topological constraints of the bacterial chromosome, DSB-bound RecB diffuses very slowly \cite{Lepore2025}. Therefore, we applied the previously developed technique of localisation enhancement \cite{Yu2006, Elf2007}: since RecB is present at low copy numbers in \ecoli\ [$\sim$5 molecules per cell on average \cite{Lepore2019a,Kalita2024}], imaging live cells with a long exposure time (1 second) made fast-diffusing RecB molecules appear as weak homogeneous signal in the cell, while very slow-diffusing RecB molecules formed diffraction-limited spots (referred to throughout this article as RecB spots, Figures \ref{Fig:exp_principle}B and \ref{Fig:exp_principle}C). The complete absence of similar spots in cells expressing the free Halo-tag from a plasmid confirmed that these spots were specific to RecB (Supp. Figure \ref{SIFig:freehalo_image}). However, their exact nature needed to be confirmed. Although DSB-bound molecules are expected to diffuse very slowly, the RecBCD-Halo complex diffuses in the crowded and constrained environment of the cytoplasm, and might undergo transient interactions with DNA \cite{Lepore2025}, which could lead to RecB spots forming independently of DSB binding. To gain more insight into the nature of RecB spots, we increased the number of DSBs by adding ciprofloxacin to agar pads before imaging, and measured the lifetime of the spots by recording 100-second timelapse videos with 2-sec interval between frames at 40 different positions in the sample. The total duration of the experiment was 75 min following exposure to ciprofloxacin (Figure \ref{Fig:lifetimes}A). The 1-second exposure time was optimised to detect RecB spots with good signal-to-noise while limiting dye photobleaching and keeping a sufficient temporal resolution to determine spot lifetimes. Visual inspection of the timelapse data showed that RecB spot lifetime was hetereogenous, with a majority of spots being visible only for a 1-2 frames, and a small number persisting for longer times (Figure \ref{Fig:lifetimes}A). These longer-lived spots became more frequent as the ciprofloxacin concentration increased. Background-subtracted intensity time-traces for single RecB spots showed that spots lost their intensity in a single step (Supp. Figure \ref{SIFig:SM_traces}), consistent with single-molecule photobleaching or transitioning from a very slowly diffusing state to a rapid one. Therefore, our imaging setup allowed us to visualise single, very slow diffusing RecB molecules, and to measure the time they spent in this diffusive state.
 
 \begin{figure}[htbp]
     \centering
@@ -45,7 +45,7 @@ Since the duration of the RecB-DSB interaction was unaffected by the amount of D
 Whereas the lifetime of RecB spots informs us on how long RecB stays bound to DSBs, the rate of appearance of spots can be used to estimate the rate of recruitment of RecB to DSBs under each DNA damage condition. To calculate this rate, we used the RecB spot lifetime histogram fits to estimate the total number of slow-dissociating spots per unit of time. Since we determined that the appearance of a slow-dissociating spot corresponds to the binding of RecB to a DSB, we could calculate the number of RecB recruitments to DSBs per cell per hour (Figure \ref{Fig:recruitment}B). We estimated that 1.3 $\pm$ 1.1 RecB molecules are recruited to DSBs per hour in the absence of ciprofloxacin. As expected, the recruitment rate of RecB increased with ciprofloxacin concentration, up to 8.2 $\pm$ 3.6 RecB recruited to DSBs per hour at 30 ng/ml ciprofloxacin.
 
 % RecB recruitment in mutants
-In the \dreca\ and \geneteneighty\ mutants, the rate of initial DSB formation is expected to be the same as in the wild-type, as these mutations only affect the repair process once DSBs are present. Surprisingly, the rate of recruitment of RecB to DSBs in the \dreca\ mutant was higher than in the wild-type both in the absence (1.6 $\pm$ 1.1 and 8.3 $\pm$ 2.8) and the presence (10.8 $\pm$ 4.3 and 28.8 $\pm$ 9.5) of ciprofloxacin (Figure \ref{Fig:recruitment}C). We hypothesise that this higher rate of RecB recruitment to DSBs is a result of multiple recruitment events on the same original DSB that cannot be repaired because of the absence of RecA. In the \geneteneighty\ mutant, RecB recruitment was higher than in the wild-type in the absence of ciprofloxacin (1.6 $\pm$ 1.1 and 8.5 $\pm$ 1.7), and equivalent to WT cells in the presence of ciprofloxacin (Figure \ref{Fig:recruitment}C). This might reflect the ability of the \geneteneighty\ mutant to repair DSBs albeit with lower efficiency than wild-type cells (see Discussion).
+In the \dreca\ and \geneteneighty\ mutants, the rate of initial DSB formation is expected to be the same as in the wild-type, as these mutations only affect the repair process once DSBs are present. Surprisingly, the rate of recruitment of RecB to DSBs in the \dreca\ mutant was higher than in the wild-type both in the absence (1.6 $\pm$ 1.1 \ph\ and 8.3 $\pm$ 2.8 \ph) and the presence (10.8 $\pm$ 4.3 \ph\ and 28.8 $\pm$ 9.5 \ph) of ciprofloxacin (Figure \ref{Fig:recruitment}C). We hypothesise that this higher rate of RecB recruitment to DSBs is a result of multiple recruitment events on the same original DSB that cannot be repaired because of the absence of RecA. In the \geneteneighty\ mutant, RecB recruitment was higher than in the wild-type in the absence of ciprofloxacin (1.6 $\pm$ 1.1 \ph\ and 8.5 $\pm$ 1.7 \ph), and equivalent to WT cells in the presence of ciprofloxacin (Figure \ref{Fig:recruitment}C). This might reflect the ability of the \geneteneighty\ mutant to repair DSBs albeit with lower efficiency than wild-type cells (see Discussion).
 
 % Part 3: Imaging RecA foci and filaments
 \subsection*{Ciprofloxacin exposure induces formation of RecA filaments}
@@ -73,4 +73,3 @@ The spatial distribution of nucleoid density and DSB-bound RecB was affected in 
 In the \geneteneighty\ mutant, the nucleoid often formed irregular shapes and small segregated regions in the cell (Figure \ref{Fig:nucleoid}C). This disorganisation was especially visible in the presence of 30 ng/ml ciprofloxacin. Furthermore, in the \geneteneighty\ mutant the nucleoid did not undergo compaction within the 75 min of our experiment (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This might reflect the less efficient RecA loading in this mutant, leading to different time dynamics of the SOS induction and either impaired or significantly delayed nucleoid compaction.
 
 In both mutant strains, the localisation of DSB-bound RecB overlapped with the bacterial nucleoid (Figure \ref{Fig:nucleoid}D), similarly to the wild-type. In the \dreca\ mutant, addition of 30 ng/ml ciprofloxacin did not change the spatial distribution of nucleoid density or DSB-bound RecB. This result was expected, as \dreca\ cells are unable to induce the SOS response, and, therefore, do not undergo nucleoid compaction. In the \geneteneighty\ mutant in the absence of ciprofloxacin, both nucleoid density and DSB-bound RecB distributions were more centred than in wild-type cells, despite the nucleoid occupying the same fraction of the cell area (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This might be because of SOS induction in this mutant, which occurs even in the absence of DNA damaging agent\cite{Lepore2025}. Upon exposure of the \geneteneighty\ mutant to ciprofloxacin, the absence of change in the distribution of nucleoid density and DSB-bound RecB position reinforced the hypothesis that nucleoid compaction is modified in this mutant.
-
