--- a/Results.tex
+++ b/Results.tex
@@ -65,12 +65,12 @@ During DSB processing, RecBCD facilitates the loading of the RecA protein on ssD
 RecA loading on ssDNA triggers the SOS response, which inhibits cell division, leading to cell filamentation. Previous studies have reported that the SOS response also triggers compaction of the bacterial nucleoid \cite{Odsbu2014}. To see if this was the case for breaks induced by ciprofloxacin in our experimental conditions, we stained DNA using the Sytox Green dye. The use of a green dye allowed us to image RecB concomitantly, and to correlate the position of DSB-bound RecB molecules (defined as RecB spots with a lifetime $>$10 sec, Supp. Figure \ref{SIFig:proba_DSB_bound}) with that of the nucleoid. In cells that were not exposed to ciprofloxacin, the nucleoid was often observed to be bi-lobed (Figure \ref{Fig:nucleoid}A), consistently with our previous observations \cite{Lepore2025}. After 60 min of exposure to ciprofloxacin, the cells appeared elongated, and the nucleoid was often compacted in the centre of the cell. As a result of nucleoid compaction, the total fraction of the cell occupied by the nucleoid decreased, from 40\% on average in untreated cells to 31\% in cells exposed to 30 ng/ml of ciprofloxacin for an hour (Supp. Figure \ref{SIFig:nucleoid_compaction}). In addition to the compaction, we observed that nucleoids were increasingly centred, and the cells elongated upon increasing exposure to ciprofloxacin, both in time and concentration (Supp. Figure \ref{SIFig:nucleoid_position}).
 
 % Correlation of nucleoid and RecB spots
-Long-lived RecB spots were found close to the nucleoid (Figures \ref{Fig:nucleoid}A and \ref{Fig:nucleoid}B)thus strengthening our interpretation that long-lived spots are DSB-bound RecB molecules. This proximity was observed at any time during the experiment (Supp. Figure \ref{SIFig:recb_nucleoid_timepoints}), suggesting that it does does not depend on the number of DSBs present in the cell. Upon exposure to increasing ciprofloxacin concentrations, induction of the SOS response caused the cells to elongate significantly (from 3.1 $\pm$ 0.19 µm on average in the absence of ciprofloxacin to 5.5 $\pm$ 0.71 µm after 75 min of exposure to 30 ng/ml ciprofloxacin, Supp. Figure \ref{SIFig:Gam_cell_length}). Despite this, and because of compaction and centring, the nucleoid remained within $\sim$2 µm either side of the cell centre. The distribution of DSB-bound RecB molecules overlapped strongly with nucleoid density (Figure \ref{Fig:nucleoid}B), indicating that as the nucleoid was compacted, additional DSB formation triggered RecB recruitment at the centre of the cell, where the nucleoid was located.
+Long-lived RecB spots were found close to the nucleoid (Figures \ref{Fig:nucleoid}A and \ref{Fig:nucleoid}B), thus strengthening our interpretation that long-lived spots are DSB-bound RecB molecules. This proximity was observed at any time during the experiment (Supp. Figure \ref{SIFig:recb_nucleoid_timepoints}), suggesting that it does does not depend on the number of DSBs present in the cell. Upon exposure to increasing ciprofloxacin concentrations, induction of the SOS response caused the cells to elongate significantly (from 3.1 $\pm$ 0.19 µm on average in the absence of ciprofloxacin to 5.5 $\pm$ 0.71 µm after 75 min of exposure to 30 ng/ml ciprofloxacin, Supp. Figure \ref{SIFig:Gam_cell_length}). Despite this, and because of compaction and centring, the nucleoid remained within $\sim$2 µm either side of the cell centre. The distribution of DSB-bound RecB molecules overlapped strongly with nucleoid density (Figure \ref{Fig:nucleoid}B), indicating that as the nucleoid was compacted, additional DSB formation triggered RecB recruitment at the centre of the cell, where the nucleoid was located.
 
 \subsection*{Nucleoid compaction requires RecA loading}
 The spatial distribution of nucleoid density and DSB-bound RecB was affected in the \dreca\ and \geneteneighty\ mutants (Figures \ref{Fig:nucleoid}C and \ref{Fig:nucleoid}D). In the \dreca\ mutant, exposure to ciprofloxacin did not trigger nucleoid compaction and centring as in wild-type cells. This confirmed that nucleoid compaction under ciprofloxacin exposure requires RecA loading, and most likely the induction of the SOS response. Despite the absence of compaction, the nucleoid occupied a smaller fraction of the cell in the \dreca\ mutant after exposure to ciprofloxacin (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This can be attributed to the progressive degradation of the bacterial chromosome by the repeated cycles of RecBCD binding (Figure \ref{Fig:recruitment}B).
 
 In the \geneteneighty\ mutant, the nucleoid often formed irregular shapes and small segregated regions in the cell (Figure \ref{Fig:nucleoid}C). This disorganisation was especially visible in the presence of 30 ng/ml ciprofloxacin. Furthermore, in the \geneteneighty\ mutant the nucleoid did not undergo compaction within the 75 min of our experiment (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This might reflect the less efficient RecA loading in this mutant, leading to different time dynamics of the SOS induction and either impaired or significantly delayed nucleoid compaction.
 
-In both mutant strains, the localisation of DSB-bound RecB overlapped with the bacterial nucleoid (Figure \ref{Fig:nucleoid}D), similarly to the wild-type. In the \dreca\ mutant, addition of 30 ng/ml ciprofloxacin did not change the spatial distribution of nucleoid density or DSB-bound RecB. This result was expected, as \dreca\ cells are unable to induce the SOS response, and, therefore, do not undergo nucleoid compaction. In the \geneteneighty\ mutant in the absence of ciprofloxacin, both nucleoid density and DSB-bound RecB distributions were more centred than in wild-type cells, despite the nucleoid occupying the same fraction of the cell area (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This might be because of SOS induction in this mutant, which occurs even in the absence of DNA damaging agent\cite{Lepore2025}. Upon exposure of the \geneteneighty\ mutant to ciprofloxacin, the absence of change in the distribution of nucleoid density and DSB-bound RecB position reinforced the hypothesis that nucleoid compaction is modified in this mutant.
+In both mutant strains, the localisation of DSB-bound RecB overlapped with the bacterial nucleoid (Figure \ref{Fig:nucleoid}D), similarly to the wild-type. In the \dreca\ mutant, addition of 30 ng/ml ciprofloxacin did not change the spatial distribution of nucleoid density or DSB-bound RecB. This result was expected, as \dreca\ cells are unable to induce the SOS response, and, therefore, do not undergo nucleoid compaction. In the \geneteneighty\ mutant in the absence of ciprofloxacin, both nucleoid density and DSB-bound RecB distributions were more centred than in wild-type cells, despite the nucleoid occupying the same fraction of the cell area (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). This might be because of SOS induction in this mutant, which occurs even in the absence of DNA damaging agent \cite{Lepore2025}. Upon exposure of the \geneteneighty\ mutant to ciprofloxacin, the absence of change in the distribution of nucleoid density and DSB-bound RecB position reinforced the hypothesis that nucleoid compaction is modified in this mutant.
 
