--- a/Introduction.tex
+++ b/Introduction.tex
@@ -15,7 +15,7 @@ DSB repair is the first step of a general response to DNA damage known as the SO
 Mutations in proteins of the repair pathway have varying effects on the cell's ability to repair DSBs. Cells that are \emph{recA}-deficient (\dreca) are entirely unable to repair DSBs through homologous recombination, and the prolonged action of RecBCD on the DNA results in the digestion of large parts of the chromosome \cite{Horii1968,Chow2007}. \emph{recA}-deficient cells are, however, capable of processing DSBs arising from fork reversal, thanks to RecBCD's exonuclease activity \cite{Seigneur1998, Michel2001}. This enables \emph{recA}-deficient cells to repair replication-induced DNA damage, resulting in a growth rate in the absence of DNA damage close to that of wild-type cells \cite{delVal2021}. The $D_{1080} \rightarrow A$ point mutation in the RecB subunit of the RecBCD complex (\teneighty) strongly reduces RecB's nuclease activity, as well as its ability to load the RecA protein on DNA \cite{Yu1998, Wang2000}. The other activities of the complex (DSB recognition, DNA unwinding, Chi-recognition) are unaffected \cite{Anderson1999}. Despite the loss of its RecA loading activity, the \geneteneighty\ mutant is still able to repair DSBs. To do so, the \teneighty CD complex unwinds DNA at the break without degrading it, and the RecJ exonuclease degrades the 5' ssDNA. Finally, the RecFOR complex loads RecA, allowing for homologous recombination to occur \cite{Ivancic-Bace_2003}.
 
 % Previous microscopy studies of DSB repair
-Previous microscopy studies have shed light on different aspects of DSB repair by RecBCD. Several \emph{in vitro} studies have quantified the rate of DNA unwinding by RecBCD \cite{Spies2003,Liu2013}, as well as the growth rate of RecA filaments \cite{Joo2006,Galletto2006,Handa2009} and the mechanism of homology search \cite{Forget2012,Ragunathan2012}. Complementary to the \emph{in vitro} work, \emph{in vivo} studies have provided insight into DNA end resection by RecBCD \cite{Wiktor2018}, confirming its high translocation speed and processivity. More recently, we investigated RecB mobility \emph{in vivo} at the single-molecule level \cite{Lepore2025}, finding that RecB's engagement in repair initiation is proportional to the level of DNA damage and that its interactions with DNA are consistent with its role in initiating the repair process. Furthermore, we observed that the efficiency of DNA repair depends on the full functionality of RecB’s activities. The spatial organisation of RecA during DSB repair has been extensively characterised. Studies reported the presence of RecA foci \cite{Renzette2005,Renzette2007,Centore2007,Amarh2018}, filaments \cite{Kidane2005}, or bundles of filaments \cite{Lesterlin2013,Ghodke2019}. The homology search and pairing processes were also observed \emph{in vivo}, showing that chromosomes are brought to the centre of the cell during the repair process \cite{Badrinarayanan2015,Wiktor2021}. Our previous observations \cite{Lepore2025} highlighted how the coordination of all RecBCD activities facilitates rapid and efficient repair. Nevertheless, several important aspects of RecBCD's processing of DSBs \emph{in vivo} remain to be clarified: how long does RecBCD stay bound to DNA after recognising a DSB? Do the recruitment and binding pattern change under different levels of DNA damage? How does its spatio-temporal organisation change upon initiation of DNA damage? Does RecA play a role in triggering RecBCD dissociation from DNA? These open questions are fundamental to the complete understanding of DSB repair in \ecoli.
+Previous microscopy studies have shed light on different aspects of DSB repair by RecBCD. Several \emph{in vitro} studies have quantified the rate of DNA unwinding by RecBCD \cite{Spies2003,Liu2013}, as well as the growth rate of RecA filaments \cite{Joo2006,Galletto2006,Handa2009} and the mechanism of homology search \cite{Forget2012,Ragunathan2012}. Complementary to the \emph{in vitro} work, \emph{in vivo} studies have provided insight into DNA end resection by RecBCD \cite{Wiktor2018}, confirming its high translocation speed and processivity. More recently, we investigated RecB mobility \emph{in vivo} at the single-molecule level \cite{Lepore2025}, finding that RecB's engagement in repair initiation is proportional to the level of DNA damage, and that its interactions with DNA are consistent with its role in initiating the repair process. Furthermore, we observed that the efficiency of DNA repair depends on the full functionality of RecB’s activities. The spatial organisation of RecA during DSB repair has been extensively characterised. Studies reported the presence of RecA foci \cite{Renzette2005,Renzette2007,Centore2007,Amarh2018}, filaments \cite{Kidane2005}, or bundles of filaments \cite{Lesterlin2013,Ghodke2019}. The homology search and pairing processes were also observed \emph{in vivo}, showing that chromosomes are brought to the centre of the cell during the repair process \cite{Badrinarayanan2015,Wiktor2021}. Our previous observations \cite{Lepore2025} highlighted how the coordination of all RecBCD activities facilitates rapid and efficient repair. Nevertheless, several important aspects of RecBCD's processing of DSBs \emph{in vivo} remain to be clarified: how long does RecBCD stay bound to DNA after recognising a DSB? Do the recruitment and binding pattern change under different levels of DNA damage? How does its spatio-temporal organisation change upon initiation of DNA damage? Does RecA play a role in triggering RecBCD dissociation from DNA? These open questions are fundamental to the complete understanding of DSB repair in \ecoli.
 
 % Overview of the article
 To address these questions, we used single-molecule imaging to quantify RecB binding to DSBs in living \ecoli\ cells exposed to ciprofloxacin. We measured the duration of the RecB-DSB interaction and found that it was not affected by the concentration of ciprofloxacin. Concurrent imaging of RecB and the bacterial nucleoid showed compaction of the bacterial nucleoid, which was associated with RecB's subsequent recruitment to new DSBs. Additional imaging of  RecA revealed structures similar to previously observed bundles, which scaled with ciprofloxacin concentration and duration of exposure. Furthermore, we imaged RecB in the \dreca\ and \geneteneighty\ mutants, and revealed that RecB dissociation depends only on the intrinsic biochemical activities of the complex. These results reveal the importance of the intricate spatio-temporal coordination of the DSB repair machinery to ensure efficient repair in \ecoli.
